--- a/src/pokedex.css
+++ b/src/pokedex.css
@@ -21,6 +21,17 @@
   background-color: #D0D0D0;
 }
 
+.pokemon-details-button {
+  text-align: center;
+  font-size: 15px;
+  width: 200px;
+  height: 30px;
+  margin: 10px;
+  font-weight: 599;
+  color: white;
+  background-color: blue;
+}
+
 .filter-button {
   width: 80px;
   height: 50px;
