--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
   text-align: center;
 }
+
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0 -15px;
+}
+
+.link {
+  margin: 0 15px;
+}
